@@ -1,3 +1,6 @@
+2013-07-11 Harri Pitkänen <hatapitk@iki.fi>
+	* Disable voikkovfstc by default since VFST is still experimental.
+
 2013-04-08 Harri Pitkänen <hatapitk@iki.fi>
 	* Add replacement suggestion ä->e.
 
